--- a/test/fixtures/result_sheets.yml
+++ b/test/fixtures/result_sheets.yml
@@ -1,3 +1,15 @@
+# == Schema Information
+#
+# Table name: result_sheets
+#
+#  id         :bigint           not null, primary key
+#  doctor     :string
+#  date       :datetime
+#  user_id    :bigint
+#  created_at :datetime         not null
+#  updated_at :datetime         not null
+#
+
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
