--- a/test/fixtures/studies.yml
+++ b/test/fixtures/studies.yml
@@ -1,3 +1,16 @@
+# == Schema Information
+#
+# Table name: studies
+#
+#  id              :bigint           not null, primary key
+#  name            :string
+#  result          :decimal(, )
+#  unit            :string
+#  result_sheet_id :bigint
+#  created_at      :datetime         not null
+#  updated_at      :datetime         not null
+#
+
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
