--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -50,7 +50,13 @@ jobs:
             - ./vendor/bundle
           key: v1-dependencies-{{ checksum "Gemfile.lock" }}
 
+      - run: bin/rails app:update:bin
+
       # Database setup
+      - run:
+          name: Wait for DB
+          command: dockerize -wait tcp://localhost:5432 -timeout 1m
+
       - run: bundle exec rake db:create
       - run: bundle exec rake db:schema:load
 
