--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -66,17 +66,12 @@ jobs:
       # run tests!
       - run:
           name: run tests
-          command: |
-            mkdir /tmp/test-results
-            TEST_FILES="$(circleci tests glob "spec/**/*_spec.rb" | \
-              circleci tests split --split-by=timings)"
+          command: bundle exec rails test
 
-            bundle exec rspec \
-              --format progress \
-              --format RspecJunitFormatter \
-              --out /tmp/test-results/rspec.xml \
-              --format progress \
-              $TEST_FILES
+      # run tests!
+      - run:
+          name: run system test
+          command: bundle exec rails test:system
 
       # collect reports
       - store_test_results:
